Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/emptyFile.ru
/? Descripción: este caso de prueba se fija si el lenguaje acepta un archivo vacio
/? Salida esperada: Error sintactico